# djangokit

./: .gitignore  LICENSE  README.md
cli/: .env.public  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
cli/src/djangokit/cli/: __main__.py  app.py  base.py  build.py  django.py  routes.py  settings.standalone.toml  state.py
cli/src/djangokit/cli/routes/: README
cli/src/djangokit/cli/scaffolding/: project.py  routes.py
cli/src/djangokit/cli/utils/: __init__.py  console.py  const.py  params.py  project.py  run.py  settings.py
cookiecutter/{{cookiecutter.package_name}}/: .env.public  .eslintrc.json  .gitignore  CHANGELOG.md  README.md  mypy.ini  package.json  pyproject.toml  settings.public.toml  tsconfig.json
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: admin.py  asgi.py  global.d.ts  settings.py  urls.py  wsgi.py
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/app/: README.md
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/components/: README.md
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/models/: __init__.py  index.tsx
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/routes/: app.html  error.tsx  layout.html  layout.tsx  page.html  page.tsx
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/routes/catchall/: handlers.py  page.tsx
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/routes/components/: README.md
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/static/: App.tsx
cookiecutter/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/templates/: base.html
core/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  tox.ini
core/src/djangokit/core/: __init__.py  apps.py  asgi.py  build.py  checks.py  conf.py  dataclasses.py  decorators.py  dk_settings.py  env.py  exceptions.py  http.py  middleware.py  problem.py  render.py  routes.py  serializers.py  settings.py  static.py  urls.py  user.py  utils.py  views.py
core/src/djangokit/core/app/: client.app.jsx  client.auth.jsx  client.main.jsx  context.jsx  server.app.jsx  server.auth.jsx  server.main.jsx  wrapper.jsx
core/src/djangokit/core/static/: bootstrap.css  bundle.js  global.css
core/src/djangokit/core/templates/: 500.html  loader.py
core/src/djangokit/core/templates/djangokit/: _app_meta.html  _body.html  _favicon.html  _head.html  _links.html  _loading.html  _meta.html  _scripts.html  _stylesheets.html  _title.html  app.html  base.html  client-app.jsx  client.app.jsx  client.main.jsx  context.jsx  error.html  main.client.jsx  main.server.jsx  main.tsx  routes.jsx  server-app.jsx  server.app.jsx
core/src/djangokit/core/templatetags/: djangokit.py
core/src/djangokit/core/test/: .env.test  apps.py  settings.public.toml  settings.py  settings.test.toml
core/src/djangokit/core/test/models/: page.py
core/src/djangokit/core/views/: __init__.py  api.py  csrf.py  error.py  handler.py  page.py  page_handler.py  route.py  user.py  utils.py
core/tests/: test_conf.py  test_middleware.py  test_route_tree.py  test_serializers.py  test_views.py
examples/basic/: .eslintrc.json  .gitignore  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml
examples/basic/src/basic/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
examples/basic/src/basic/migrations/: 0001_add_page_model.py
examples/basic/src/basic/models/: page.py
examples/basic/src/basic/routes/: layout.tsx  page.tsx
examples/basic/src/basic/static/: App.tsx  index.tsx  layout.tsx  main.tsx
examples/basic/src/basic/templates/: base.html
examples/projector/: .eslintrc.json  .gitignore  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml
examples/projector/src/projector/: asgi.py  settings.py  wsgi.py
examples/projector/src/projector/migrations/: 0001_add_project_model.py
examples/projector/src/projector/models/: __init__.py  project.py
examples/projector/src/projector/templates/: base.html
website/: .env.public  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  README.md  commands.py  eslint.config.mjs  mypy.ini  package.json  prettier.config.mjs  pyproject.toml  settings.development.toml  settings.public.toml  tsconfig.json
website/ansible/: production  site.yaml
website/ansible/roles/base/vars/: main.yaml
website/ansible/roles/deploy/files/: package.json
website/ansible/roles/deploy/tasks/: main.yaml
website/ansible/roles/deploy/templates/: djangokit.conf.j2  djangokit.ini.j2  mystops.conf.j2  mystops.ini.j2
website/ansible/roles/prepare/files/: package.json
website/ansible/roles/prepare/tasks/: main.yaml
website/ansible/roles/prepare/templates/: dk.j2  local.cfg.j2  run.j2  runcommands.toml.j2  wsgi.py.j2
website/ansible/roles/provision/files/: configure-iptables  nginx.conf  renew-cert  upgrade
website/ansible/roles/provision/handlers/: main.yaml
website/ansible/roles/provision/tasks/: main.yaml
website/src/djangokit/website/: admin.py  api.ts  apps.py  asgi.py  auth.py  global.d.ts  markdown.py  settings.py  urls.py  wsgi.py
website/src/djangokit/website/app/: wrapper.tsx
website/src/djangokit/website/components/: Admonition.tsx  ErrorMessage.tsx  Form.tsx  IconButton.tsx  Loader.tsx  NotFound.tsx  Page.tsx  page.tsx
website/src/djangokit/website/hooks/: index.ts
website/src/djangokit/website/migrations/: 0001_add_page_model.py  0002_add_todo_item_model.py  0003_add_blog_post_model.py  0004_add_blog_comment_model.py
website/src/djangokit/website/models/: __init__.py  blog.py  blog_post.py  index.ts  page.py  schema.py  todo.py
website/src/djangokit/website/routes/: api.py  api.ts  app.html  error.tsx  fetch.ts  handlers.py  layout.html  layout.tsx  models.ts  page.html  page.tsx
website/src/djangokit/website/static/: global.css
website/src/djangokit/website/templatetags/: bootstrap.py
website/src/djangokit/website/utils/: index.ts
(+95 files in other folders)
