[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "org-djangokit-cli"
version = "0.0.8.dev0"
description = "DjangoKit command line interface"
authors = [ { name = "Wyatt Baldwin", email = "self@wyattbaldwin.com" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "org-djangokit-core>=0.0.4",
    "cookiecutter>=2.1.1",
    "typer>=0.7.0",
    "watchdog>=2.0",
    "types-toml>=0.10.8.1",
]

[tool.setuptools.package-data]
"djangokit.cli" = [
    "**/*.toml",
]

[project.scripts]
dk = "djangokit.cli.__main__:app"
djangokit = "djangokit.cli.__main__:app"

[tool.uv]
dev-dependencies = [
    "org-djangokit-core",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.6.9",
    "tox>=4.21.2",
    "types-toml>=0.10.8",
]

[tool.uv.sources]
org-djangokit-core = { path = "../core", editable = true }

[tool.make-release.args]
test = false
target-branch = "cli-release"
tag-name = "cli-v{version}"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
