[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "org-djangokit-core"
version = "0.0.5.dev0"
description = "DjangoKit core"
authors = [ { name = "Wyatt Baldwin", email = "code@wyattbaldwin.com" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django>=3.0",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.9.2",
    "tox>=4.23.2",
]

[tool.setuptools.package-data]
"djangokit.core" = [
    "**/*.css",
    "**/*.html",
    "**/*.ico",
    "**/*.js",
    "**/*.jsx",
    "**/*.toml",
    "**/*.ts",
    "**/*.tsx",
]

[tool.djangokit.cli]
standalone = true

[tool.make-release.args]
test-command = "make test"
target-branch = "core-release"
tag-name = "core-v{version}"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
