[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "djangokit.core"

[project]
name = "org-djangokit-core"
version = "0.0.5.dev0"
description = "DjangoKit core"
authors = [{ name = "Wyatt Baldwin", email = "code@wyattbaldwin.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.15.0",
    "tox>=4.34.1",
    "types-toml>=0.10.8.20240310"
]

[tool.djangokit.cli]
standalone = true

[tool.make-release.args]
test-command = "make test"
target-branch = "core-release"
tag-name = "core-v{version}"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
