[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "org-djangokit-website"
version = "0.0.2.dev0"
description = "DjangoKit Website"
authors = [ { name = "Wyatt Baldwin", email = "code@wyattbaldwin.com" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "org-djangokit-core==0.0.5.dev0",
    "org-djangokit-cli==0.0.8.dev0",
    "Django>=5.1.5",
    "markdown>=3.7",
    "pygments>=2.19.1",
    "pydantic>=2.10.5",
    "runcommands>=1.0a71",
]

[dependency-groups]
dev = [
    "ansible>=11.1.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.setuptools.package-data]
"djangokit.website" = [
    "**/*.css",
    "**/*.html",
    "**/*.ico",
    "**/*.js",
    "**/*.jsx",
    "**/*.toml",
    "**/*.ts",
    "**/*.tsx",
]

[tool.uv.sources]
org-djangokit-core = { path = "../core", editable = true }
org-djangokit-cli = { path = "../cli", editable = true }

[tool.make-release.args]
test = false

[tool.runcommands.globals]
env = "production"
host = "djangokitssh.wyattbaldwin.com"
public_hostname = "djangokit.wyattbaldwin.com"

[tool.runcommands.envs]
development = {}
production = {}

[tool.runcommands.args]
remote = {"cd" = "/sites/djangokit"}

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"./commands.py" = ["F722", "F821"]
