[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "djangokit.website"

[project]
name = "org-djangokit-website"
version = "0.0.2.dev0"
description = "DjangoKit Website"
authors = [{ name = "Wyatt Baldwin", email = "code@wyattbaldwin.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "org-djangokit-core>=0.0.5.dev0",
    "org-djangokit-cli>=0.0.8.dev0",
    "Django>=6.0.6",
    "markdown>=3.10.2",
    "pygments>=2.20.0",
    "pydantic>=2.13.4",
    "runcommands>=1.0a73",
]

[dependency-groups]
dev = [
    "org-djangokit-core",
    "org-djangokit-cli",
    "ansible>=14.0.0",
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]

[tool.uv.sources]
org-djangokit-core = { path = "../core", editable = true }
org-djangokit-cli = { path = "../cli", editable = true }

[tool.make-release.args]
test = false

[tool.runcommands.globals]
env = "production"
host = "app-1.wyattbaldwin.com"
public_hostname = "djangokit.wyattbaldwin.com"

[tool.runcommands.envs]
development = { }
production = { }

[tool.runcommands.args]
remote = { "cd" = "/sites/djangokit" }

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"./commands.py" = ["F722", "F821"]
