[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.dist_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [ { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" } ]
license = { text = "{{ cookiecutter.license }}" }
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "org-djangokit-core",
    "org-djangokit-cli",
]

[tool.setuptools.package-data]
"{{ cookiecutter.package_name }}" = [
    "**/*.css",
    "**/*.html",
    "**/*.ico",
    "**/*.js",
    "**/*.jsx",
    "**/*.toml",
    "**/*.ts",
    "**/*.tsx",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
