[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.dist_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [ { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" } ]
license = { text = "{{ cookiecutter.license }}" }
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "org-djangokit-core",
    "org-djangokit-cli",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.setuptools.package-data]
"{{ cookiecutter.package_name }}" = [
    "**/*.css",
    "**/*.html",
    "**/*.ico",
    "**/*.js",
    "**/*.jsx",
    "**/*.toml",
    "**/*.ts",
    "**/*.tsx",
]

# Uncomment this section to use the dev versions of the DjangoKit
# packages, assuming you have the DjangoKit repo cloned in an adjacent
# directory.
#[tool.uv.sources]
#org-djangokit-core = { path = "../djangokit/core", editable = true }
#org-djangokit-cli = { path = "../djangokit/cli", editable = true }

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
