[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "{{ cookiecutter.package_name }}"

[project]
name = "{{ cookiecutter.dist_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [{ name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" }]
license = { text = "{{ cookiecutter.license }}" }
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "org-djangokit-core",
    "org-djangokit-cli",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

# Uncomment this section to use the dev versions of the DjangoKit
# packages, assuming you have the DjangoKit repo cloned in an adjacent
# directory.
#[tool.uv.sources]
#org-djangokit-core = { path = "../djangokit/core", editable = true }
#org-djangokit-cli = { path = "../djangokit/cli", editable = true }

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
